[package]
name = "tigers"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "DataFrame library for Rust, inspired by Pandas"
repository = "https://github.com/adaliaramon/tigers"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"